--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "react-parcel-starter",
   "version": "1.0.0",
   "description": "starter for react",
-  "main": "index.js",
+  "source": "src/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel src/index.html"
+    "start": "parcel",
+    "build": "parcel build"
   },
   "repository": {
     "type": "git",
