--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "parcel build"
   },
   "repository": {
@@ -26,6 +28,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "parcel": "^2.2.0"
   }
 }
