--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "starter for react",
   "source": "src/index.html",
+  "homepage": "https://littlestudent.github.io/thors-todo-app-react/",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel",
@@ -22,7 +23,6 @@
   "bugs": {
     "url": "https://github.com/getmimo/react-parcel-starter/issues"
   },
-  "homepage": "https://github.com/getmimo/react-parcel-starter#readme",
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
